--- a/olympic-report-application/src/assets/style.css
+++ b/olympic-report-application/src/assets/style.css
@@ -1,6 +1,49 @@
+@import 'nprogress/nprogress.css';
+
+#nprogress .bar {
+  background: #ff9900 !important;
+  height: 5px !important;
+}
+
+#nprogress .peg {
+  box-shadow:
+    0 0 10px #ff9900,
+    0 0 5px #ff9900 !important;
+}
+#nprogress .spinner {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  width: 50px; 
+  height: 50px; 
+  display: block;
+  opacity: 1; 
+  transition: opacity 0.3s ease-in-out;
+  z-index: 1000;
+}
+
+#nprogress .spinner-icon {
+  width: 100%;
+  height: 100%;
+  border: 5px solid rgba(255, 0, 0, 0.1); 
+  border-top-color: #ff0000; 
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 h1 {
   @apply text-4xl mb-8;
 }
